--- a/css/base.css
+++ b/css/base.css
@@ -29,11 +29,12 @@ header img {
     width: 100%;
     box-shadow: 0 5px 5px rgba(3, 3, 3, .8);
     border-radius: 1rem;
-    margin: 20px;
+    margin: 7px;
 }
 
 header h1 {
-    font-size: 3rem;
+    font-family: 'Lobster', cursive;
+    font-size: 3.5rem;
     margin: 0;
     text-shadow: 0 3px 3px rgba(2, 0, 0, 0.8);
     color: white;
@@ -68,6 +69,10 @@ main ul{
     padding: 1rem;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+}
+
+footer a {
+    color: rgb(126, 214, 243);
 }
 
 footer {
