--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -1,60 +1,36 @@
 /* The small viewport is the base css file for this assignment */
-/*
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-*/
+
 a:link {
     color: rgb(126, 214, 243);
 }
   
 a:hover {
-    color: rgb(243, 133, 133);
+    color: purple;
 }
 
-header h2 {
-margin: 10px;
-color: rgb(126, 214, 243);
-}
-  
 body {
     font-family: 'Lato', sans-serif;
-    font-size: 16px;
-    font-weight: 600;
     background-color: rgb(185, 219, 210);
+    max-width: 900px;
+    margin: auto;
 }
 
-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
+img {
+    max-width: 100%;
+    display: block;
+    border-radius: 10px;
+    box-shadow: 5px 5px 7px grey;
+  }
 
-main h2 {
-    color: rgb(126, 214, 243);
-    background-color: rgb(50, 74, 121);
-    font-size: 20px;
-    padding: 10px;
-    text-shadow: 0 3px 3px rgb(2 0 0 / 80%);
-    border-radius: 1rem;
-}
-
-main h3 {
-    color: rgb(243, 133, 133);
-    text-shadow: 0 1px 1px rgb(1 0 0 / 80%);
-}
-
-div { 
-    text-align: center;
-    margin-top: 10px; 
-    background-color: white;  
-    margin: 10px 10px;
-    padding: 10px;
-    border-radius: 1rem;
-}
-
-header, footer {
+header,
+footer {
     background-color: rgb(50, 74, 121);
     color: white;
     text-align: center;
@@ -62,19 +38,82 @@ header, footer {
     margin: 10px;
     border-radius: 1rem;
     text-shadow: 0 3px 3px rgba(2, 0, 0, 0.8);
+    box-shadow: 5px 5px 7px grey;
 }
 
-h1 {
+header h1 {
     color: white;
     font-family: 'Lobster Two', cursive;
     font-size: 60px;
+    margin: 0;
+    
 }
 
-img {
-   max-width: 250px;
-   height: auto;
-   border-radius: 10px;
-   box-shadow: 5px 5px 7px grey;
+main {
+    display: grid;
+    grid-template-columns: 1fr;
+	margin: 0;
+
+    /*padding: 1rem;
+    max-width: 800px;*/
+}
+
+/* phone views **************************/
+
+main section {
+	margin: 0.5rem;
+	padding: 0 1rem;
+	background-color: white;
+    border: 1.5px black solid;
+    border-radius: .5rem;
+}
+
+main h2 {
+    color: rgb(126, 214, 243);
+    background-color: rgb(50, 74, 121);
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+    text-shadow: 0 3px 3px rgb(2 0 0 / 80%);
+    border-radius: 1rem;
+    margin: 10px;
+}
+
+main section h3 {
+    color: black;
+    text-shadow: 5px 5px 7px grey;
+    margin: 0;
+    text-align: center;
+
+    padding: 1rem;
+    min-height: 2rem;
+  
+}
+
+section a {
+    color: rgb(213, 103, 103);
+    text-align: center;
+    padding: .5rem;  
+}
+
+main section img {
+    max-width: 100%;
+    display: block;
+    border-radius: 10px;
+    box-shadow: 5px 5px 7px grey;
+
+    margin: 1rem 0;
+    
+    
+    max-width: 100%;
+}
+
+main section p {
+    margin: 15px;
+
+    font-size: 18px;
+    line-height: 1.3;
+    padding: .5rem;
 }
 
 footer a {
@@ -89,3 +128,116 @@ footer p:last-of-type{
     padding-top: .3rem;
     color: rgb(243, 133, 133);
 }
+*/
+/******************************************************/
+
+/************Orignial******************************************/
+/*
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a:link {
+    color: rgb(126, 214, 243);
+}
+  
+a:hover {
+    color: purple;
+}
+
+
+header h2 {
+    margin: 20px;
+    color: rgb(126, 214, 243);
+}
+
+main h2 {
+    margin: 10px;
+}
+
+body {
+    font-family: 'Lato', sans-serif;
+    background-color: rgb(185, 219, 210);
+    max-width: 900px;
+    margin: auto;
+}
+
+img {
+    max-width: 100%;
+    display: block;
+    border-radius: 10px;
+   box-shadow: 5px 5px 7px grey;
+}
+
+header, footer {
+    background-color: rgb(50, 74, 121);
+    color: white;
+    text-align: center;
+    padding: .5rem;
+    margin: 10px;
+    border-radius: 1rem;
+    text-shadow: 0 3px 3px rgba(2, 0, 0, 0.8);
+    box-shadow: 5px 5px 7px grey;
+}
+
+header h1 {
+    color: white;
+    font-family: 'Lobster Two', cursive;
+    font-size: 60px;
+}
+ 
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+	margin: 0;
+}
+
+main h2 {
+    color: rgb(126, 214, 243);
+    background-color: rgb(50, 74, 121);
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+    text-shadow: 0 3px 3px rgb(2 0 0 / 80%);
+    border-radius: 1rem;
+}
+ 
+main h3 {
+    color: black;
+    text-shadow: 5px 5px 7px grey;
+    margin: 20px 10px;
+}
+
+main p {
+    margin: 15px;
+}
+
+main a {
+    color: rgb(213, 103, 103);
+}
+
+section { 
+    text-align: center;
+    margin-top: 10px; 
+    background-color: white;  
+    margin: 10px 10px;
+    padding: 10px;
+    border-radius: 1rem;
+    box-shadow: 5px 5px 7px grey;
+}
+
+footer a {
+    color: rgb(126, 214, 243);
+}
+
+footer {
+    padding-top: .5rem;
+}
+
+footer p:last-of-type{
+    padding-top: .3rem;
+    color: rgb(243, 133, 133);
+}
+*/
