--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -1,6 +1,10 @@
-/* 'large' media query section */
-@media (min-width: 64em) {
-    main{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+/* Desktop Views ****************************/
+@media only screen and (min-width: 60em) {
+	main {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+
+	main section:nth-child(3) {
+		grid-column: span 1;
+	}
 }
