--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,6 +1,23 @@
 /* 'medium' media query section */
-@media (min-width: 32.5em) {
-    main{
-        grid-template-columns: 1fr 1fr;
-    }
+@media only screen and (min-width: 32.5em) {
+	main {
+		grid-template-columns: 1fr 1fr;
+	}
+
+	main section:nth-child(2) {
+		display: block;
+	}
+
+	main section:nth-child(3) {
+		grid-column: span 2;
+	}
+
+	main section picture {
+		display: block;
+	}
+	main section picture img {
+		width: 100%;
+		height: auto;
+		border: 1px solid #bbb;
+	}
 }
