--- a/css/base.css
+++ b/css/base.css
@@ -32,7 +32,7 @@ header img {
 }
 
 header h1 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
     font-size: 3.5rem;
     margin: 0;
     text-shadow: 0 3px 3px rgba(2, 0, 0, 0.8);
