--- a/lesson3/css/base.css
+++ b/lesson3/css/base.css
@@ -1,10 +1,12 @@
+/*********Styling for ALL pages***********/
 * {
     margin: 0;
     padding: 0;
     box-sizing: 0;
 }
 
-/*****Home Page****************************/
+
+/*****Home Page***************************/
 
 
 
