--- a/lesson3/css/query.css
+++ b/lesson3/css/query.css
@@ -1,33 +1,34 @@
-/* Desktop Views **********Large css********/
-@media only screen and (min-width: 60em) {
-	main {
-		grid-template-columns: 1fr 1fr 1fr;
-	}
-
-	main section:nth-child(3) {
-		grid-column: span 1;
-	}
-}
-
-/* 'medium' media query section ************/
-@media only screen and (min-width: 32.5em) {
-	main {
+/* Tablet */
+@media only screen and (min-width: 600px) {
+    main {
 		grid-template-columns: 1fr 1fr;
 	}
 
-	main section:nth-child(2) {
+	article:nth-child(2) {
 		display: block;
 	}
 
-	main section:nth-child(3) {
+	section:nth-child(3) {
 		grid-column: span 2;
 	}
 
-	main section picture {
-		display: block;
-	}
-	main section picture img {
-		width: 100%;
-		height: auto;
-		border: 1px solid #bbb;
-	}
+    h1 {
+        font-size: 2.5rem;
+    }
+}
+
+/* Desktop */
+@media only screen and (min-width: 960px) {
+    h1 {
+        font-size: 3.2rem;
+    }
+    nav a {
+        font-size: 1rem;
+    }
+    main {
+        grid-template-columns: 1fr 1fr;
+    }
+    section:nth-child(3) {
+        grid-column: span 1;
+    }
+}
