--- a/lesson3/css/base.css
+++ b/lesson3/css/base.css
@@ -1,4 +1,3 @@
-/*********Styling for ALL pages***********/
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +6,7 @@
 
 header {
     font-size: 30px;
+	text-align: center;
 }
 
 nav ul{
@@ -32,7 +32,6 @@ nav ul li a {
 }
 
 nav a:hover {
-    /*--d: 50%;*/
 	background: white;
 	
 }
@@ -92,24 +91,6 @@ header, footer {
 	text-shadow: 0 3px 3px #32292F;
 }
 
-
-
-/*****Home Page***************************/
-
-
-
-
-/****Color-Scheme**************************/
-
-
-
-
-/****Target-Audience***********************/
-
-
-
-
-/****Typography****************************/
 
 
 
