--- a/lesson3/css/query.css
+++ b/lesson3/css/query.css
@@ -17,6 +17,7 @@
 @media only screen and (min-width: 960px) {
     h1 {
         font-size: 3.2rem;
+        margin: 30.304px 0px;
     }
     nav a {
         font-size: 1rem;
