--- a/lesson4/chamber/css/small.css
+++ b/lesson4/chamber/css/small.css
@@ -1,27 +1,53 @@
-/*Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
-html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+/*Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  
+html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}*/
 
-/*----------- apply a natural box layout model to all elements --------------*/
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+/*----------- apply a natural box layout model to all elements --------------
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }*/
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family: Lato, sans-serif;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+main {
+    background-color: whitesmoke;
+}
+
+/* Hamburger Menu */
+/*
 h1, p {
     margin: 0 2vw;
 }
+*/
 nav {
     background-color: #eee;
-}
-nav button{
-    margin: .2rem 2vw;
-    background: transparent;
-    border: none;
-    font-size: 2rem;
-    color: #555;
 }
 
 nav ul {
     list-style-type: none;  /* remove list dots */
     padding: 0;  /* remove padding on right side of list items */
     margin: 0;  /* remove margin from hamburger icon and home button */
+}
+
+nav button{
+    margin: .2rem 2vw;
+    background: transparent;
+    border: none;
+    font-size: 2rem;
+    color: #555;
 }
 
 nav ul li a {
@@ -50,3 +76,22 @@ nav ul.open {display: block;}
 
 #hamburgerBtn.open span:nth-child(1) {display: none;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
+
+/* Mobile Layout (Grid) */
+
+.containers {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 125px);
+    gap: 10px;
+    padding: 10px;
+}
+
+.box1, .box2, .box3, .box4, .box5 {
+    border: 2px solid #000000;
+    background-color: white;
+}
+
+.box6 {
+display: none;
+}
