--- a/lesson4/chamber/css/medium.css
+++ b/lesson4/chamber/css/medium.css
@@ -1,5 +1,5 @@
 /*35rem is also 566px when basefont is 16px*/
-@media only screen and (min-width: 35rem) {
+@media only screen and (min-width: 600px) {
 
     nav button {display: none;}
     
@@ -16,4 +16,43 @@
         border-right: 1px solid rgba(0,0,0,0.3);
     }
     
-    } /* end medium */
+    .containers {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(5, 125px);
+        gap: 10px;
+        padding: 10px;
+}
+
+.box1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.box2 {
+    grid-column: 1/2;
+    grid-row: 5/6;
+}
+
+.box3 {
+    grid-column: 2/3;
+    grid-row: 5/6;
+}
+
+.box4 {
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+.box5 {
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+.box6 {
+    display: grid;
+    grid-column: 1/3;
+    grid-row: 4/5;
+}
+    
+    } 
