--- a/lesson4/chamber/css/small.css
+++ b/lesson4/chamber/css/small.css
@@ -1,8 +1,3 @@
-/*Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  
-html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}*/
-
-/*----------- apply a natural box layout model to all elements --------------
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }*/
 
 * {
     margin: 0;
@@ -11,14 +6,14 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}*/
 }
 
 body {
-    font-size: 16px;
+    font-size: 14px;
     font-family: Lato, sans-serif;
     max-width: 900px;
     margin: 0 auto;
 }
 
 img {
-    max-width: 100%;
+    max-width: 25%;
     height: auto;
 }
 
@@ -27,11 +22,11 @@ main {
 }
 
 /* Hamburger Menu */
-/*
+
 h1, p {
-    margin: 0 2vw;
+    margin: 10px;
 }
-*/
+
 nav {
     background-color: #eee;
 }
@@ -82,16 +77,45 @@ nav ul.open {display: block;}
 .containers {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, 125px);
+    grid-template-rows: repeat(6, 125px);
     gap: 10px;
     padding: 10px;
 }
 
-.box1, .box2, .box3, .box4, .box5 {
+.box1, .box2, .box3, .box4, .box5, .box6 {
     border: 2px solid #000000;
     background-color: white;
 }
-
 .box6 {
-display: none;
+    display: none;
+    }
+
+/*
+.box5 {
+grid-row: 5/7;
 }
+
+
+
+#spot1, #spot2 {
+    border: 2px solid #000000;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 125px);
+    gap: 10px;
+    padding: 10px;
+    
+}
+
+#spot1 {
+    grid-row: 5/6;
+}
+
+#spot2 {
+    grid-row: 6/7;
+}
+
+#spot3 {
+    display: none;
+}*/
