--- a/lesson4/chamber/css/large.css
+++ b/lesson4/chamber/css/large.css
@@ -1,7 +1,78 @@
-/* 64em is also 1028px when basefone is 16px */
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 960px) {
 
-    nav ul li a {
-        padding: .5rem 1rem;
-    }
+header {
+    grid-template-columns: 155px 1fr 420px 70px;
+}
+
+header div {
+    grid-column: 4/5;
+    grid-row: 1/2;
+}
+
+nav button {
+    display: none;
+}
+
+nav ul#primaryNav {
+    display:flex;
+    justify-content: center;
+    align-content: center;
+}
+
+nav ul li a {
+    /*padding: .5rem 1rem;*/
+    border: none;
+}
+
+/*** MAIN GRID LAYOUT ***/
+.containers {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 175px 175px 175px;
+    /*gap: 10px;*/
+    padding: 10px;
+}
+
+.box1 {
+    grid-column: 2/4;
+    grid-row: 1/3;
+}
+
+.box2 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.box3 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.box4 {
+    grid-column: 2/4;
+    grid-row: 3/4;
+}
+
+
+.box5 {
+    grid-column: 4/5;
+    grid-row: 1/4;
+    display: flex;
+    flex-direction: column;
+}
+    
+.box6 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+#spot3 {
+    display: contents;
+    border: 2px solid #000000;
+}
+
+.box1,.box2, .box3, .box4, .box5, .box6 {
+    border: 2px solid #000000;
+    background-color: white;
+}
     }
