--- a/lesson3/css/base.css
+++ b/lesson3/css/base.css
@@ -26,7 +26,7 @@ nav ul li a {
 	text-decoration: none;
 	font-family: 'Lobster Two', cursive;
 	font-size: 1.5rem;
-	background-color: #99E1D9;
+	background-color: #93C2C2;
 	color: #32292F;
 	text-shadow: 0 3px 3px white;
 }
@@ -39,8 +39,8 @@ nav a:hover {
 body {
 	font-size: 16px;
     font-family: 'Lato', sans-serif;
-	background-color: #F0F7F4;
-	color: #705D56;
+	background-color: #CBE2E2;
+	color: #65514E;
     max-width: 900px;
     margin: 0 auto;
 }
@@ -73,7 +73,7 @@ h2 {
 
 h3 {
 	margin: 1rem;
-	color: #477f83;
+	color: #355F5F;
 	}
 
 p, main li {
@@ -82,7 +82,7 @@ p, main li {
 
 header, footer {
     display: flex;
-    background-color: #477f83;
+    background-color: #355F5F;
 	font-family: 'Lobster Two', cursive;
 	color: white;
     align-items: center;
