--- a/lesson3/css/base.css
+++ b/lesson3/css/base.css
@@ -26,7 +26,7 @@ nav ul li a {
 	text-decoration: none;
 	font-family: 'Lobster Two', cursive;
 	font-size: 1.5rem;
-	background-color: #93C2C2;
+	background-color: #B1D3D3;
 	color: #32292F;
 	text-shadow: 0 3px 3px white;
 }
@@ -39,7 +39,7 @@ nav a:hover {
 body {
 	font-size: 16px;
     font-family: 'Lato', sans-serif;
-	background-color: #CBE2E2;
+	background-color: #E5F0F0;
 	color: #65514E;
     max-width: 900px;
     margin: 0 auto;
