--- a/lesson4/chamber/css/small.css
+++ b/lesson4/chamber/css/small.css
@@ -10,7 +10,7 @@ body {
     font-family: Lato, sans-serif;
     max-width: 1160px;
     margin: 0 auto;
-    background-color: #e5f0f0;
+    background-color: #ffffff;
 }
 
 img {
@@ -24,7 +24,7 @@ header {
     grid-template-rows: 1fr 20px;
     gap: 10px;
     align-items: center;
-    padding: 10px;
+    padding: 10px 10px 20px 10px;
     text-align: center;
     background-color: #355f5f;
     color: #ffffff;
@@ -40,8 +40,12 @@ header div {
 header p {
     grid-row: 2/3;
     grid-column: 1/5;
-    background-color: rgb(216, 215, 215);
-    border: 1px solid #000000;
+    background-color: #b1d3d3;
+    color: #32292F;
+    border: 1px solid #ffffff;
+    font-family: Lobster Two, cursive;
+    text-shadow: 0 3px 3px white;
+    padding: 10px;
 }
 
 h1 {
@@ -60,6 +64,9 @@ h1 {
 nav {
     display: block;
     position: relative;
+    margin: 20px auto;
+    background-color: #b1d3d3;
+    border: 1px solid #ffffff;
 }
 
 nav ul {
@@ -71,8 +78,7 @@ nav ul {
 #primaryNav {
     position: absolute;
     right: 10px;
-    border: 1px solid #000;
-    background: rgb(210, 209, 209);
+    border: 1px solid #000000;
 }
 
 nav button{
@@ -80,7 +86,7 @@ nav button{
     background: transparent;
     border: none;
     font-size: 1.5rem;
-    color: #ffffff;
+    color: #32292f;
 }
 
 nav ul li a {
@@ -90,8 +96,7 @@ nav ul li a {
     font-family: 'Lobster Two', cursive;
     color: #32292f;
     text-shadow: 0 3px 3px white;
-    background-color: #B1D3D3;
-    border: 1px solid ;
+    background-color: #b1d3d3;
     border-top: 1px solid rgba(0,0,0,0.5);
 }
 /*
@@ -115,7 +120,7 @@ nav ul.open {display: block;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
 
 main {
-    background-color: whitesmoke;
+    background-color: #e5f0f0;
 }
 
 /* Mobile Layout (Grid) */
@@ -170,6 +175,8 @@ footer section {
     display: inherit;
     text-align: center;
     padding: 10px;
+    background-color: #355f5f;
+    color: #ffffff;
 }
 
 .address {
@@ -180,7 +187,17 @@ footer section {
 
 footer a {
     text-decoration: none;
+    color: #ffffff;
    
+}
+
+footer a:hover {
+    color: #ffffff;
+    text-decoration: underline;
+}
+
+h3 {
+    font-family: Lobster Two, cursive;
 }
 
 footer .urlsite {
@@ -189,7 +206,12 @@ footer .urlsite {
 
 footer #lastline {
     text-align: center;
-    font-size:  14px;
+    font-size:  16px;
     padding: 10px;
-
+    font-family: Lobster Two, cursive;
+    background-color: #355f5f;
+    color: #ffffff;
+    padding: 10px;
+	text-shadow: 0 3px 3px #32292F;
+    border-top: 1px solid #e5f0f0;
 }
