--- a/lesson4/chamber/css/large.css
+++ b/lesson4/chamber/css/large.css
@@ -26,7 +26,7 @@ nav ul#primaryNav {
 }
 
 nav ul li a {
-    /*padding: .5rem 1rem;*/
+    /*padding: .8rem 2vw;*/
     border: none;
 }
 
@@ -35,7 +35,6 @@ nav ul li a {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 175px 175px 175px;
-    /*gap: 10px;*/
     padding: 10px;
 }
 
