--- a/lesson4/chamber/css/small.css
+++ b/lesson4/chamber/css/small.css
@@ -139,8 +139,8 @@ main {
 
 .box5 {
     display: grid;
-    grid-column: 1fr;
-    grid-row: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 10px;
     padding: 10px;
 }
