--- a/lesson4/chamber/css/small.css
+++ b/lesson4/chamber/css/small.css
@@ -16,6 +16,8 @@ body {
 img {
     max-width: 100%;
     height: auto;
+    border: 1px solid #32292f;
+    box-shadow: 3px 3px 10px rgb(54, 54, 54);
 }
 
 header {
@@ -24,11 +26,9 @@ header {
     grid-template-rows: 1fr 20px;
     gap: 10px;
     align-items: center;
-    padding: 10px 10px 20px 10px;
-    text-align: center;
+    padding: 20px;
     background-color: #355f5f;
     color: #ffffff;
-    text-shadow: 0 3px 3px #32292F;
 }
 
 header div {
@@ -38,14 +38,14 @@ header div {
 }
 
 header p {
+    display: grid;
     grid-row: 2/3;
     grid-column: 1/5;
+    text-align: center;
     background-color: #b1d3d3;
     color: #32292F;
-    border: 1px solid #ffffff;
-    font-family: Lobster Two, cursive;
-    text-shadow: 0 3px 3px white;
-    padding: 10px;
+    border: 1px solid #32292f;
+    padding: 5px 0px;
 }
 
 h1 {
@@ -53,6 +53,11 @@ h1 {
     line-height: .6;
     padding: 5px;
     font-family: Lobster Two, cursive;
+    text-shadow: 0 3px 3px #32292F;
+}
+
+h2 {
+
 }
 
 #cc {
@@ -65,8 +70,6 @@ nav {
     display: block;
     position: relative;
     margin: 20px auto;
-    background-color: #b1d3d3;
-    border: 1px solid #ffffff;
 }
 
 nav ul {
@@ -81,30 +84,35 @@ nav ul {
     border: 1px solid #000000;
 }
 
-nav button{
-    margin: .3rem 1vw;
+#primaryNav .active {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+
+nav button {
+   
     background: transparent;
     border: none;
     font-size: 1.5rem;
-    color: #32292f;
+    color: #ffffff;
+}
+
+nav button:hover {
+    border: 1px solid #ffffff;
+    padding: 2px 5px;
 }
 
 nav ul li a {
     display: block;
     padding: .8rem 2vw;
     text-decoration: none;
-    font-family: 'Lobster Two', cursive;
+    text-align: center;
     color: #32292f;
-    text-shadow: 0 3px 3px white;
     background-color: #b1d3d3;
     border-top: 1px solid rgba(0,0,0,0.5);
 }
-/*
-nav ul li.active a {
-    background-color: rgba(0,0,0,0.2);
-    color: #fff;
-}
-*/
+
 nav ul li a:hover {
     background-color: #ffffff;
 }
@@ -128,13 +136,21 @@ main {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 125px);
-    gap: 10px;
+    gap: 20px;
+    padding: 20px;
+}
+
+containers div {
+    border: 1px solid #32292f;
+    background-color: #ffffff;
+    box-shadow: 3px 3px 10px rgb(54, 54, 54);
     padding: 10px;
 }
 
 .box1, .box2, .box3, .box4, .box5, .box6 {
     border: 2px solid #000000;
     background-color: white;
+    padding: 10px;
 }
 
 .box5 {
@@ -167,12 +183,12 @@ main {
 
 /*** Selectors ***/
 .material-icons {
-    color: red;
+    color: #ffffff;
 }
 
 /*** Footer ***/
 footer section {
-    display: inherit;
+    display: grid;
     text-align: center;
     padding: 10px;
     background-color: #355f5f;
@@ -180,24 +196,15 @@ footer section {
 }
 
 .address {
-    line-height: 1.2rem;
+    line-height: 1.5rem;
     padding-bottom: 10px;
-    /*font-weight: 600;*/
+   
 }
 
 footer a {
     text-decoration: none;
     color: #ffffff;
    
-}
-
-footer a:hover {
-    color: #ffffff;
-    text-decoration: underline;
-}
-
-h3 {
-    font-family: Lobster Two, cursive;
 }
 
 footer .urlsite {
@@ -208,7 +215,7 @@ footer #lastline {
     text-align: center;
     font-size:  16px;
     padding: 10px;
-    font-family: Lobster Two, cursive;
+   
     background-color: #355f5f;
     color: #ffffff;
     padding: 10px;
