--- a/lesson4/chamber/css/large.css
+++ b/lesson4/chamber/css/large.css
@@ -23,6 +23,7 @@ nav ul#primaryNav {
     justify-content: center;
     align-content: center;
     position: unset;
+    border: 2px solid #32292f;
 }
 
 nav ul li a {
