--- a/lesson4/chamber/css/large.css
+++ b/lesson4/chamber/css/large.css
@@ -61,24 +61,25 @@ nav ul li a {
 
 
 .box5 {
-    grid-column: 4/5;
-    grid-row: 1/4;
+    grid-column: 1/2;
+    grid-row: 3/4;
     display: flex;
     flex-direction: column;
 }
     
 .box6 {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-column: 4/5;
+    grid-row: 1/4;
+    grid-template-columns: 1fr;
 }
 
 #spot3 {
     display: contents;
     border: 2px solid #000000;
 }
-
+/*
 .box1,.box2, .box3, .box4, .box5, .box6 {
     border: 2px solid #000000;
     background-color: white;
-}
+}/
     }
