--- a/lesson4/chamber/css/medium.css
+++ b/lesson4/chamber/css/medium.css
@@ -18,20 +18,19 @@ h1 {
 }
 
 /*** TABLET LAYOUT ***/
-.containers {
-    display: grid;
-    grid-template-columns: 425px 1fr;
+/*
+.containers div {
+    grid-template-columns: 500px 1fr;
+    grid-template-rows: repeat(5, 125px);
     gap: 20px;
     padding: 20px;
-}
+}*/
 
 .box1 {
     grid-column: 1/3;
-    grid-row: 1/2;
 }
 
 .box2 {
-    grid-column: 1/2;
     grid-row: 5/6;
 }
 
@@ -46,36 +45,16 @@ h1 {
 }
 
 .box5 {
+    display: block;
     grid-column: 1/3;
     grid-row: 3/4;
-    display: flex;
-    grid-template-columns: 1fr 1fr;
-    
-    gap: 10px;
-    padding: 10px; 
 }
 
 .box6 {
-    display: grid;
     grid-column: 1/3;
     grid-row: 4/5;
+    grid-template-columns: 1fr 1fr;
 }
-  /*  
-#spot1 {
-    border: 2px solid #000000;
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-#spot2 {
-    border: 2px solid #000000;
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-
-#spot3 {
-    display: none;
-}*/
 
 /*** FOOTER LAYOUT ***/
 .foot1 {
