--- a/lesson4/chamber/css/small.css
+++ b/lesson4/chamber/css/small.css
@@ -140,7 +140,7 @@ main {
     padding: 20px;
 }
 
-containers div {
+.containers div {
     border: 1px solid #32292f;
     background-color: #ffffff;
     box-shadow: 3px 3px 10px rgb(54, 54, 54);
@@ -154,32 +154,23 @@ containers div {
 }
 
 .box5 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-    padding: 10px;
+    display: none;
+}
+
+.box div:nth-child(3) {
+    display: none;
 }
 
 .box6 {
+    display: grid; 
+    gap: 10px;
+    height: 100%;
+    grid-row: 5/7;  
+}
+
+.box6 div:nth-child(3) {
     display: none;
-}
-
-#spot1 {
-    border: 2px solid #000000;
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-#spot2 {
-    border: 2px solid #000000;
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-
-#spot3 {
-    display: none;
-}
+  }
 
 /*** Selectors ***/
 .material-icons {
