--- a/lesson4/chamber/css/medium.css
+++ b/lesson4/chamber/css/medium.css
@@ -19,6 +19,12 @@ h1 {
 
 /*** TABLET LAYOUT ***/
 
+.containers {
+    grid-template-columns: 500px 1fr;
+    grid-template-rows: repeat(5, 125px);
+   
+}
+
 .box1 {
     grid-column: 1/3;
 }
